Mise à jour de la version de quarkus